# Fullstack-rust

./: README.md  notes.org  shell.nix
messages-actix/: Cargo.toml  ntoes.org  shell.nix
messages-actix/src/: lib.rs  main.rs
numbers/: Cargo.toml  notes.org
numbers/src/: lib.rs  main.rs
